påbörjat graph, funkar ej
för att få så att man kan se startsidan, ändra i app.component.html så
det står <app-start<></app-start>

--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -1,3 +1,10 @@
-<p>
-  graph works!
-</p>
+
+<div class="row">
+	<script src="./flare.js"></script>
+   	<div class="col-md-8">gg<span id='tree'></span> </div>
+   	<div class="col-md-4"> <div id='vid-container'> <embed id='vid'/></div>
+   	<script> console.log("hjw")</script>
+	<script src="./graphtestjs.js"></script>
+</div>
+</div>
+
