--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -1,10 +1,7 @@
 
 <div class="row">
-	<script src="./flare.js"></script>
-   	<div class="col-md-8">gg<span id='tree'></span> </div>
+   	<div class="col-md-8"><span id='tree'></span> </div>
    	<div class="col-md-4"> <div id='vid-container'> <embed id='vid'/></div>
-   	<script> console.log("hjw")</script>
-	<script src="./graphtestjs.js"></script>
 </div>
 </div>
 
