--- a/src/app/graph/graph.component.css
+++ b/src/app/graph/graph.component.css
@@ -1,16 +1,16 @@
-.node circle {
+>>> .node circle {
   fill: #fff;
   stroke: steelblue;
   stroke-width: 3px;
 }
 
-.node text { font: 12px sans-serif; }
+>>> .node text { font: 12px sans-serif; }
 
-.node--internal text {
+>>> .node--internal text {
   text-shadow: 0 1px 0 #fff, 0 -1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff;
 }
 
-.link {
+>>> .link {
   fill: none;
   stroke: #ccc;
   stroke-width: 2px;
