--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -1,6 +1,6 @@
 
 <div class="row">
-{{bla | json}}
+<!--{{bla | json}}-->
    	<div class="col-md-8"><span id='tree'></span> </div>
    	<div class="col-md-4"> <div id='vid-container'> <embed id='vid'/></div>
 </div>
