--- a/src/app/graph/graph.component.css
+++ b/src/app/graph/graph.component.css
@@ -31,9 +31,12 @@
 	display: inline-block;
 	box-shadow: 0 0 30px #888888;
 }
+>>> .box:hover{
+	z-index: 1;
+}
 >>> .courseCourse{
 	text-align: center;
-	color:black;
+	color:white;
 	padding: 10px;
 	padding-right: 30px;
 	padding-left: 30px;
@@ -48,6 +51,10 @@
 >>> .courseLink {
 	color:black;
 	color: rgb(9, 30, 255);
+}
+
+>>> .courseHeading{
+	background-color: black;
 }
 >>> p {
 	margin-bottom: 0px; /* OBS OBS VIKTIG! */
