lagt till eller beroende information i noderna, har inte börjat med utseendet än

--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -1,5 +1,22 @@
 
 <div class="row">
+<!--<nav class="nav navbar-inverse navbar-static-top">
+            <div class="container">
+            <form class="navbar-form navbar-left">
+                <div class="input-group inputBar">
+                     <input #course type="text" autofocus class="form-control" placeholder='"SF1625", "Calculus..."'>
+                       <div class="input-group-btn">
+                            <button class="btn btn-default" (click)="searchCourse(course.value)"><i class="glyphicon glyphicon-search"></i></button>
+                        </div>
+                </div>
+        	</form>
+
+            <ul class="nav navbar-nav navbar-right">
+            <li><a class="language" (click)="changeLanguage()">{{texts.languageSwitch}}</a></li>
+            <li><a href="#"><span class="glyphicon glyphicon-info-sign infoicon" aria-hidden="true"></span></a></li>
+            </ul>
+        </div>
+    </nav> -->
 <!--{{bla | json}}-->
    	<div class="col-md-8"><span id='tree'></span> </div>
    	<div class="col-md-4"> <div id='vid-container'> <embed id='vid'/></div>
