--- a/src/app/graph/graph.component.css
+++ b/src/app/graph/graph.component.css
@@ -31,9 +31,7 @@
 	display: inline-block;
 	box-shadow: 0 0 30px #888888;
 }
->>> .box:hover{
-	z-index: 1;
-}
+
 >>> .courseCourse{
 	text-align: center;
 	color:white;
@@ -46,6 +44,7 @@
 >>> .courseContent {
 	margin: 15px;
 	color:black;
+	/*display: none;*/
 }
 /*länken*/
 >>> .courseLink {
@@ -58,4 +57,8 @@
 }
 >>> p {
 	margin-bottom: 0px; /* OBS OBS VIKTIG! */
+}
+
+>>> .box:hover {
+	z-index: 1;
 }
