--- a/src/app/graph/graph.component.css
+++ b/src/app/graph/graph.component.css
@@ -23,13 +23,31 @@
   stroke-width: 2px;
 }
 
+>>> .clink {
+  fill: none;
+  stroke: #ccc;
+  stroke-width: 2px;
+}
 
 /*CSS för nodens utseende*/
 >>> .box {
+	width: 15%;
 	position: absolute;
 	background-color: white;
 	display: inline-block;
 	box-shadow: 0 0 30px #888888;
+}
+>>> .cbox {
+	width: 15%;
+	position: absolute;
+	background-color: white;
+	display: inline-block;
+	box-shadow: 0 0 30px #888888;
+}
+
+>>> .credReq{
+	border-top: double;
+	border-color: rgb(87,87,255);
 }
 
 >>> .courseCourse{
@@ -38,7 +56,7 @@
 	padding: 10px;
 	padding-right: 30px;
 	padding-left: 30px;
-	font-size: 16px;
+	font-size: 10px;
 }
 
 >>> .courseContent {
@@ -61,4 +79,7 @@
 
 >>> .box:hover {
 	z-index: 1;
+}
+>>>#courseHeading2 {
+	background-color: grey !important;
 }
