Chage to dynamic text in info popover

--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -8,7 +8,7 @@
                         <popover-content #infoPopover
                                          title="Information"
                                          [closeOnClickOutside]="true">
-                            KTH Graph visualization är ett projekt i kursen Mjukvarukonstruktion. Idén och uppgiften kommer från företaget Findwise. Vi som skapat denna hemsida är 9 studenter som går vårt andra/tredje år på Datasektionen respektive tredje år på Civilingenjör och Lärare (inriktning data) Sektionen.
+                            {{texts.info}}
                         </popover-content>
                     </span></a></li>
             </ul>
