--- a/src/app/start/start.component.css
+++ b/src/app/start/start.component.css
@@ -12,8 +12,14 @@ html body{
 	font-family: arial;
 }
 
+.navbar-inverse .navbar-nav>li>a {
+	color: #636363;
+	margin-right: 5px;
+}
+
 .navbar-inverse .navbar-nav>li>a:hover{
 	color:black;
+	cursor: pointer;
 }
 
 .navbar-inverse .navbar-nav>li>a:active{
@@ -32,6 +38,12 @@ html body{
 /* infoikonen*/
 .infoicon{
 	font-size: 22px;
+	color: #636363;
+}
+
+.infoicon:hover {
+	color: black;
+	cursor: pointer;
 }
 
 /* ----- POPOVERN -----*/
@@ -60,6 +72,7 @@ html body{
 .inputBar{
 	margin-top: 4%;
 	box-shadow: 0 0 30px #888888;
+	border-radius: 4px;
 }
 
 .inputTextBar{
