--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -1,6 +1,6 @@
 
 <div class="row">
-    <nav class="nav navbar-inverse navbar-static-top">
+    <nav class="nav navbar-inverse navbar-static-top" id = "graphNav">
         <div class="container">
             <!-- Search -->
             <form class="navbar-form navbar-left">
