fixat en bugg med en kurs samt när informationen senast uppdaterades (inte helt korrekt datum, men kan lätt ändras då man vet det. Ändra i graph.component.html sista diven)

--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -22,5 +22,6 @@
 
     <div class="col-md-8"><span id='tree'></span> </div>
     <div class="col-md-4"> <div id='vid-container'> <embed id='vid'/></div></div>
+    <div style ="position:fixed;bottom:0px;left:0px">Latest Data fetch: 15 mars 2017</div>
 </div>
 
