Create graph-not-found-component. Call createGraph immediatly after information from server is fetched

--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -35,7 +35,7 @@
                     <div class="input-group inputBar">
                         <input #course type="text" autofocus class="form-control" placeholder='"SF1625", "Calculus..."' value="{{lastQuery}}">
                         <div class="input-group-btn">
-                            <button class="btn btn-default" (click)="searchCourse(course.value)"><i class="glyphicon glyphicon-search"></i></button>
+                            <button type="button" class="btn btn-default" (click)="searchCourse(course.value)"><i class="glyphicon glyphicon-search"></i></button>
                     
                         </div>
                     </div>
