--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -7,7 +7,7 @@
                 <div class="input-group inputBar">
                         <input #course type="text" autofocus class="form-control" placeholder='"SF1625", "Calculus..."'>
                         <div class="input-group-btn">
-                            <button class="btn btn-default" (click)="searchCourse(course.value)"><i class="glyphicon glyphicon-search"></i></button>
+                            <button type="button" class="btn btn-default" (click)="searchCourse(course.value)"><i class="glyphicon glyphicon-search"></i></button>
                         </div>
                 </div>
             </form>
