Add translation system for graph page

--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -14,7 +14,7 @@
 
             <!-- Info and language switch -->
             <ul class="nav navbar-nav navbar-right">
-                <!--<li><a class="language" (click)="changeLanguage()">{{texts.languageSwitch}}</a></li>-->
+                <li><a class="language" (click)="changeLanguage()">{{texts.languageSwitch}}</a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-info-sign infoicon" aria-hidden="true"></span></a></li>
             </ul>
         </div>
