Add rerouting to course-not-found page. Fix search with enter bug

--- a/src/app/course-not-found/course-not-found.component.html
+++ b/src/app/course-not-found/course-not-found.component.html
@@ -1,3 +1,4 @@
-<p>
-  course-not-found works!
-</p>
+<h2>Course not found</h2>
+<p>The course ID is probably not in the database</p>
+
+<a routerLink="/start">Go back to start</a>
