--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -33,7 +33,7 @@
                 <!-- Sökrutan -->
                 <form>
                     <div class="input-group inputBar">
-                        <input #course type="text" autofocus class="form-control" placeholder='"SF1625", "Calculus..."' value="{{lastQuery}}">
+                        <input #course type="text" autofocus class="form-control" placeholder='"SF1625", "Calculus..."' value="{{lastQuery}}" (keyup.enter)="searchCourse(course.value)">
                         <div class="input-group-btn">
                             <button type="button" class="btn btn-default" (click)="searchCourse(course.value)"><i class="glyphicon glyphicon-search"></i></button>
                     
