--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -20,7 +20,7 @@
         </div>
     </nav>
 
-    <div class="col-md-8"><span id='tree'></span> </div>
+    <div class="col-md-8" style ="top:100px"><span id='tree'></span> </div>
     <div class="col-md-4"> <div id='vid-container'> <embed id='vid'/></div></div>
 </div>
 
