Fix languageSwitch bug

--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -51,6 +51,7 @@
                     <hr class="lineSearch">
                 </div>
                 <p *ngIf="errorMessage">{{errorMessage}}</p>
+                <p *ngIf="emptyResult">{{texts.noResult}}</p>
 
             </div>
             <div class="col-md-3"></div>
