--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -19,7 +19,9 @@
             </ul>
         </div>
     </nav>
-
+    <div style="position: fixed; top:60px; left: 5px;" *ngIf ="loading">
+        loading...
+    </div>
     <div class="col-md-8" style ="top:100px"><span id='tree'></span> </div>
     <div class="col-md-4"> <div id='vid-container'> <embed id='vid'/></div></div>
 </div>
