--- a/src/app/graph/graph.component.css
+++ b/src/app/graph/graph.component.css
@@ -170,7 +170,7 @@
 	margin-top: 3px;
 }
 
-/* infoikonen*/
+/* infoikonen */
 .infoicon{
 	font-size: 22px;
 	color: #636363;
@@ -181,7 +181,7 @@
 	cursor: pointer;
 }
 
-/* ----- POPOVERN -----*/
+/* ----- POPOVERN ----- */
 .popover{
     width:300px;
     height:250px;   
@@ -189,4 +189,10 @@
 
 .popover-title{
 	color:red;
+}
+
+/* searchResults */
+
+.searchResults {
+	color: white;
 }
