Add home button. Add show nr of results in start page. Polish show dynamic search result in graph page

--- a/src/app/graph/graph.component.css
+++ b/src/app/graph/graph.component.css
@@ -194,5 +194,16 @@
 /* searchResults */
 
 .searchResults {
+	background: white;
+	position: absolute;
+}
+
+.courseResult {
 	color: white;
+	padding: 15px;
+	border-bottom: 1px solid #d4d4d4;
+}
+
+>>> .searchExample {
+	color: black;
 }
