flyttat grafen 10px till höger

--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -48,7 +48,7 @@
     <div style="position: fixed; top:60px; left: 5px;" *ngIf ="loading">
         Loading...
     </div>
-    <div class="col-md-8" style ="top:100px"><span id='tree'></span> </div>
+    <div class="col-md-8" style ="top:100px; left: 10px;"><span id='tree'></span> </div>
     <div class="col-md-4"> <div id='vid-container'> <embed id='vid'/></div></div>
 </div>
 
