--- a/src/app/graph/graph.component.css
+++ b/src/app/graph/graph.component.css
@@ -34,6 +34,10 @@
   stroke-width: 2px;
 }
 
+>>> .legend{
+	position: absolute;
+	display: inline-block;
+}
 /*CSS för nodens utseende*/
 >>> .box {
 	width: 200px;
