Fix dubble click needed bug on start page. Fix no results text showing to often

--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -36,9 +36,9 @@
                 <!-- Sökrutan -->
                 <form>
                     <div class="input-group inputBar">
-                        <input #course type="text" autofocus class="form-control" placeholder='"SF1625", "Calculus..."' value="{{lastQuery}}" (keyup)="searchCourse(course.value)" (blur)="reroute(course.value)">
+                        <input #course type="text" autofocus class="form-control" placeholder='"SF1625", "Calculus..."' value="{{lastQuery}}" (keyup)="searchCourse(course.value)" (keyup.enter)="reroute(course.value)">
                         <div class="input-group-btn">
-                            <button type="button" class="btn btn-default" (click)="searchCourse(course.value)"><i class="glyphicon glyphicon-search"></i></button>
+                            <button type="button" class="btn btn-default" (click)="reroute(course.value)"><i class="glyphicon glyphicon-search"></i></button>
                     
                         </div>
                     </div>
