All the last bug fixes we have time for

--- a/src/app/course-not-found/course-not-found.component.html
+++ b/src/app/course-not-found/course-not-found.component.html
@@ -1,4 +1,4 @@
 <h2>Course not found</h2>
 <p>The course ID is probably not in the database</p>
 
-<a routerLink="/start">Go back to start</a>
+<a [routerLink]="['/start']">Go back to start</a>
