--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -40,7 +40,7 @@
                 </li>
                 <li>
                     <!-- Home -->
-                    <a [routerLink]="['/start']"><span class="glyphicon glyphicon-home"></span></a>
+                    <a [routerLink]="['/start']"><span class="glyphicon glyphicon-home infoicon"></span></a>
                 </li>
             </ul>
         </div>
